deps/crates/vendor/serde_json/tests/ui/unexpected_comma.rs
use serde_json::json;

fn main() {
    json!({ "a" , "b": true });
}
